# Loro

./: .gitignore  README.md  app.py  com.github.t00m.Loro.json  loro.doap  meson.build  setup.py  start.sh  test.sh  test_cmd.sh  util.py  wchat.py  whatsapp.py
Loro/: env.py  main.py
Loro/core/: util.py
Loro/extractors/: whatsapp.py
Loro/services/nlp/: spacy.py
data/: com.github.t00m.Loro.desktop.in  com.github.t00m.Loro.metainfo.xml.in  meson.build
data/resources/: about.blp  loro.gresource.xml  meson.build
data/resources/icons/scalable/: meson.build
data/resources/web/: meson.build
data/resources/web/uikit/: meson.build
data/resources/web/uikit/css/: print.css
data/resources/web/uikit/datatables/: readme.txt
data/resources/web/uikit/tpl/: HTML_BODY.tpl  HTML_BODY_FILE.tpl  HTML_BODY_INDEX.tpl  HTML_BODY_LEMMA.tpl  HTML_BODY_SENTENCE.tpl  HTML_BODY_TOKEN.tpl  HTML_DICTIONARY.tpl  HTML_FOOTER.tpl  HTML_FOOTER_FILE.tpl  HTML_FOOTER_INDEX.tpl  HTML_FOOTER_LEMMA.tpl  HTML_FOOTER_SENTENCE.tpl  HTML_FOOTER_TOKEN.tpl  HTML_HEADER.tpl  HTML_SPACY_MODIFIERS.tpl  HTML_WORKBOOK_LANDING_PAGE.tpl  LORO.tpl  PDF_WORKBOOK_REPORT.tpl
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
doc/: devel.md  useful_links.txt
examples/de/: BASIC-GREETINGS.txt
extractors/: whatsapp.py
loro/: builder.py  cache.py  dictionary.py  disrec.py  loro.in  loro.py  main.py  meson.build  myduden.py  report.py  stats.py  translate.py  workbook.py  workflow.py
loro/backend/builders/: excel.py
loro/backend/core/: config.py  constants.py  env.py  log.py  run_async.py  util.py
loro/backend/extractors/: whatsapp.py
loro/backend/services/duden/: duden.py
loro/backend/services/nlp/: spacy.py
loro/backend/services/translate/: google.py
loro/builders/: excel.py
loro/core/: env.py  log.py  util.py
loro/extractors/: whatsapp.py
loro/frontend/gui/: __init__.py  actions.py  app.py  factory.py  gsettings.py  icons.py  main.py  models.py
loro/frontend/gui/widgets/: browser.py  check.py  columnview.py  dashboard.py  dashboard.py.copy  dialogs.py  editor.py  filedialog.py  preferences.py  selector.py  status.py  summary.py  toolbar.py  translator.py  views.py  wbeditor.py  window.py
loro/services/nlp/: spacy.py
nlp/: nltk.py  spacy.py
po/: meson.build
scripts/: build_and_install_loro_with_meson.sh  build_loro_with_meson_first_time.sh  clean.sh  install.sh  setup_meson_debian12.sh  uninstall.sh  whatsapp.py
