install_data(
  'com.github.t00m.Loro-view-refresh-symbolic.svg',
  'com.github.t00m.Loro-text-editor-symbolic.svg',
  'com.github.t00m.Loro-list-add-symbolic.svg',
  'com.github.t00m.Loro-edit-paste-symbolic.svg',
  'com.github.t00m.Loro-edit-find-symbolic.svg',
  'com.github.t00m.Loro-edit-delete-symbolic.svg',
  'com.github.t00m.Loro-edit-copy-symbolic.svg',
  'com.github.t00m.Loro-document-new-symbolic.svg',
  'com.github.t00m.Loro-document-edit-symbolic.svg',
  'application-x-addon-symbolic.svg',
  'com.github.t00m.Loro-add-symbolic.svg',
  'com.github.t00m.Loro-user-trash-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'loro', 'resources', 'icons', 'scalable')
)
