install_data(
  'com.github.t00m.Loro-view-refresh-symbolic.svg',
  'com.github.t00m.Loro-text-editor-symbolic.svg',
  'com.github.t00m.Loro-list-add-symbolic.svg',
  'com.github.t00m.Loro-edit-paste-symbolic.svg',
  'com.github.t00m.Loro-edit-find-symbolic.svg',
  'com.github.t00m.Loro-edit-delete-symbolic.svg',
  'com.github.t00m.Loro-edit-copy-symbolic.svg',
  'com.github.t00m.Loro-document-new-symbolic.svg',
  'com.github.t00m.Loro-document-edit-symbolic.svg',
  'application-x-addon-symbolic.svg',
  'com.github.t00m.Loro-add-symbolic.svg',
  'com.github.t00m.Loro-user-trash-symbolic.svg',
  'com.github.t00m.Loro-workbook-add-symbolic.svg',
  'com.github.t00m.Loro-workbook-delete-symbolic.svg',
  'com.github.t00m.Loro-workbooks.svg',
  'com.github.t00m.Loro-dashboard-symbolic.svg',
  'com.github.t00m.Loro-sidebar-show-up-symbolic.svg',
  'com.github.t00m.Loro-sidebar-show-down-symbolic.svg',
  'com.github.t00m.Loro-sidebar-show-left-symbolic.svg',
  'com.github.t00m.Loro-sidebar-show-right-symbolic.svg',
  'com.github.t00m.Loro-document-open-symbolic.svg',
  'com.github.t00m.Loro-view-pin-symbolic.svg',
  'com.github.t00m.Loro-dialog-question-symbolic.svg',
  'com.github.t00m.Loro-selector-add.svg',
  'com.github.t00m.Loro-selector-add-all.svg',
  'com.github.t00m.Loro-selector-remove.svg',
  'com.github.t00m.Loro-selector-remove-all.svg',
  'com.github.t00m.Loro-document-open-symbolic.svg',
  'com.github.t00m.Loro-document-save-symbolic.svg',
  'com.github.t00m.Loro-printer-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'loro', 'resources', 'icons', 'scalable')
)

